--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="content">
             <div class="left">
                 <h1>Landing Page</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, eum natus? Sunt amet adipisci, voluptatibus ab ducimus asperiores officia cumque itaque tempore rem mollitia minus? Fuga eius veniam ipsum harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button id="btn-1">Sign up</button>
             </div>
             <div class="right">
