--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="head-section">
+    <div class="hero">
         <div class="header">
             <img class="logo" src="./Images/Blank.png">
             <ul>
@@ -26,7 +26,9 @@
             <div class="left">
                 <h1>Landing Page</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button id="btn-1">Sign up</button>
+                <div>
+                    <button id="btn-1">Sign up</button>
+                </div>
             </div>
             <div class="right">
                 <img src="Images/Image.png">
