--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
             </div>
         </div>
     </div>
+    <div information>
+        <h2>Some random information</h2>
+        
+    </div>
 </body>
 </html>
