--- a/index.html
+++ b/index.html
@@ -35,9 +35,39 @@
             </div>
         </div>
     </div>
-    <div information>
+    <div class="content">
         <h2>Some random information</h2>
-        
+        <div class="block-container">
+            <div class="info">
+                <img src="Images/Colour.png">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="info">
+                <img src="Images/Colour.png">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="info">
+                <img src="Images/Colour.png">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="info">
+                <img src="Images/Colour.png">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="quote">
+            <p class="italic">Duck tastes good</p>
+            <p class="bold">- me</p>
+        </div>
+        <div class="cta-container">
+            <div class="cta-text">
+                <span class="cta">Call to action! It's time!</span>
+                <p>Click the button to sign up to our product</p>
+            </div>
+            <div class=button-container>
+                <button id="btn-2">Sign Up</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
