--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </li>
             </ul>
         </div>
-        <div class="content">
+        <div class="hero-content">
             <div class="left">
                 <h1>Landing Page</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="right">
-                <img src="Images/Image.png">
+                <img class="product" src="Images/Image.png">
             </div>
         </div>
     </div>
